@@ -116,7 +116,7 @@ public class SubscriptionIntermediateDelegationFuture<E> extends TerminableInter
     		Integer	index	= indices!=null ? indices.get(Thread.currentThread()) : null;
     		if(index==null)
     		{
-    			index	= new Integer(0);
+    			index	= Integer.valueOf(0);
     		}
     		ownres	= ownresults!=null ? ownresults.get(Thread.currentThread()) : null;
     		
