@@ -96,7 +96,7 @@ public class SpinnerCellEditor extends CellEditor
 
 	protected Object doGetValue()
 	{
-		return new Integer(selection);
+		return Integer.valueOf(selection);
 	}
 
 	protected void doSetFocus()
