@@ -110,7 +110,7 @@ public class CliJob extends CronJob<String>
 			{
 				final String cmd = cmds.next();
 				
-				Tuple2<String, Integer> sess = new Tuple2<String, Integer>(SUtil.createUniqueId("emailsess"), new Integer(0));
+				Tuple2<String, Integer> sess = new Tuple2<String, Integer>(SUtil.createUniqueId("emailsess"), Integer.valueOf(0));
 				
 				cliser.executeCommand(cmd, sess).addResultListener(new IResultListener<String>()
 				{
