@@ -41,7 +41,7 @@ public class MulticastReceiveHandler extends ReceiveHandler
 			getAgent().getSocket().receive(pack);
 			byte[] data = new byte[pack.getLength()];
 			System.arraycopy(buffer, 0, data, 0, pack.getLength());
-			ret = new Object[]{pack.getAddress(), new Integer(pack.getPort()), data};
+			ret = new Object[]{pack.getAddress(), Integer.valueOf(pack.getPort()), data};
 //		}
 //		catch(IOException e)
 //		{
