@@ -411,7 +411,7 @@ public class ObjectTreeModel implements TreeModel
 								if (index == -1)
 								{
 									// add it to removedChildren
-									removedChildren.put(new Integer(i), oldchild);
+									removedChildren.put(Integer.valueOf(i), oldchild);
 									// don't remove child from old children here! This will change 
 									// index of other child's as well
 								}
@@ -467,7 +467,7 @@ public class ObjectTreeModel implements TreeModel
 								else
 								{
 									// register children for change event
-									insertedChildren.put(new Integer(i), newchild);
+									insertedChildren.put(Integer.valueOf(i), newchild);
 								}
 							}
 							// clear selected children after use
